--- a/photos.html
+++ b/photos.html
@@ -8,12 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
-    <p>
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
-    </p>
+    <h1>🥐 A picture of a croissant</h1>
+    <img src="/images/croissant.jpg" alt="croissant" />
     <div class="links">
       <a href="/">Homepage</a>
       <a href="/photos.html">Photo</a>
