--- a/photos.html
+++ b/photos.html
@@ -11,9 +11,9 @@
     <h1>🥐 A picture of a croissant</h1>
     <img src="/images/croissant.jpg" alt="croissant" />
     <div class="links">
-      <a href="/">Homepage</a>
-      <a href="/photos.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="homepage">Homepage</a>
+      <a href="/photos.html" title="Photos of croissant">Photo</a>
+      <a href="/contact.html" title="Contact us">Contact</a>
     </div>
   </body>
 </html>
